k8s/erangel-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erangel-service
spec:
  selector:
    app: erangel-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
