k8s/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  selector:
    io.kompose.service: zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
